<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrangesToOranges</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello\nWorld!</string>
    <string name="stats">Stats</string>
    <string name="playGame">Play Online</string>
    <string name="play">Play</string>
    <string name="passPlay">Pass \'n\' Play</string>
    <string name="friendList">Friend\nList</string>
    <string name="accountSettings">Account\nSettings</string>
    <string name="button5">Login</string>
    <string name="guest">OR Login as Guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lockCard">Lock In</string>
    <string name="title_activity_end_screen">EndScreen</string>
    <string name="scoreBoard">ScoreBoard</string>
    <string name="playAgain">Play Again</string>
    <string name="mainMenu">Main Menu</string>
    <string name="signin_text">Sign In</string>
    <string name="create_text">Create</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="pickOrange">Pick an Orange below that you think best matches the Blue!</string>
    <string name="splash">Splash Screen</string>
    <string name="MainLogin">Login</string>
    <string name="logout">Logout</string>
    <string name="register">No Account? Register!</string>
    <string name="alreadyRegistered">Already Registered? Login!</string>

    <color name="orange">#FF8B00</color>
    <color name="lightBlue">#997373D9</color>
    <color name="green">#00BB3F</color>
    <color name="darkBlue">#1B1BB3</color>
    <color name="lightOrange">#FFBF73</color>

    <string name="numPlayers">Players</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_judge_screen">JudgeScreen</string>
    <string name="Step1">During each round each player is dristributed five oranges, with a certain word on each. A judge is also appointed at the start of the round.</string>
    <string name="Step2">Every one else during the round is a player. As a player you must select the card that closest describes the blue during that round.</string>
    <string name="Step3">Once all players have locked in a selection. The judge selects the closest orange that relates to the blue.</string>
    <string name="Step4">The player who\'s orange gets chosen, wins the round and gets a point. The player who has the most points wins the game.</string>
    <string name="Instructions">Instructions</string>
    <string name="title_activity_pass_play">PassPlay</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_exit">Are you sure you would like to end the game?</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="app_id">1412006192384300</string>
    <string name="title_activity_end_game">EndGame</string>
    <string name="title_activity_play_online">PlayOnline</string>
    <string name="namePlayer">Pick Player Names</string>
    <string name="title_activity_game_starter">GameStarter</string>


</resources>
