<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Instructions" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/bullet"
        android:src="@drawable/orange_bullet" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/bullet"
        android:src="@drawable/orange_bullet" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/ImageView01"
        android:text="@string/Step2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageView01"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/bullet"
        android:src="@drawable/orange_bullet" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/ImageView02"
        android:text="@string/Step3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageView02"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        
        android:src="@drawable/orange_bullet" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/ImageView03"
        android:text="@string/Step4"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/Step1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/Instructions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
